Carry the changed user's state on the change notification
subscribeToChanges delivered a bare id, so every subscriber read the
store back to learn what had happened — and raced the write that woke
it. It now carries a UserChange: the id plus the state read back on the
same connection after the commit, so a reconcile needs no second read.

- announces a change to a user's profile, identity set or deletion
  state, and nothing else: a statement that altered no row stays
  silent, and so does touchLastActive, which would otherwise make the
  highest-frequency write path a reconcile storm
- the read-back closes its own transaction before the fan-out, so no
  subscriber runs while the connection sits idle inside one, and a
  failure there is reported rather than folded into the caller
- endTransaction replaces resetAutoCommit: restoring auto-commit was
  committing writes that a RuntimeException had abandoned mid-method,
  which doUpdateAllIdentities and doUpdateProfile could both reach
- BaseUserChangeContractTest states the contract once and runs it
  against the store and the fake alike; the fake had drifted three
  ways — announcing an unchanged identity set, treating a reordered
  set as a change, and leaving updatedAt behind on restore
- the late-joiner carve-out now says registration is not atomic with
  the image read, so a subscriber holds arriving changes until it has
  applied the image